..F....... [ZBXNEXT-1399] fixed multiselect alignment in Safari
git-svn-id: svn://svn.zabbix.com/branches/dev@34255 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/ZBXNEXT-1399-ms2/frontends/php/styles/themes/darkblue/main.css
+++ b/ZBXNEXT-1399-ms2/frontends/php/styles/themes/darkblue/main.css
@@ -533,8 +533,7 @@ div.preloader {
 /* multiselect */
 .multiselect input { color: white; }
 .multiselect .selected ul {
-	border: 1px solid #B3C9D6;
-	background: #001C31;
+	border: 1px solid #B3C9D6; background: #001C31;
 	background-image: -webkit-gradient(linear, 0 0, 0 100%, color-stop(1%, #03111C), color-stop(15%, #001C31));
 	background-image: -webkit-linear-gradient(top, #03111C 1%, #001C31 15%);
 	background-image: -moz-linear-gradient(top, #03111C 1%, #001C31 15%);
