--- a/ZBXNEXT-1399-ms2/frontends/php/styles/themes/darkorange/main.css
+++ b/ZBXNEXT-1399-ms2/frontends/php/styles/themes/darkorange/main.css
@@ -508,7 +508,7 @@ div.preloader {
 /* multiselect */
 .multiselect input { color: #F50; }
 .multiselect .selected ul {
-	border: 1px solid #DFDFDF; background: #474747;
+	border: 1px solid #DFDFDF; background: #313131;
 	background-image: -webkit-gradient(linear, 0 0, 0 100%, color-stop(1%, #474747), color-stop(15%, #313131));
 	background-image: -webkit-linear-gradient(top, #474747 1%, #313131 15%);
 	background-image: -moz-linear-gradient(top, #474747 1%, #313131 15%);
@@ -517,7 +517,7 @@ div.preloader {
 }
 .multiselect .selected ul.active { border: 1px solid #BE4F00; }
 .multiselect .selected ul li {
-	border: 1px solid #DFDFDF; background: #4E4D4E; color: #FFFFFF;
+	border: 1px solid #DFDFDF; background: #908E8E; color: #FFFFFF;
 	background-image: -webkit-gradient(linear, 0 0, 0 100%, color-stop(1%, #4E4D4E), color-stop(15%, #908E8E));
 	background-image: -webkit-linear-gradient(top, #4E4D4E 1%, #908E8E 15%);
 	background-image: -moz-linear-gradient(top, #4E4D4E 1%, #908E8E 15%);
